Fixed cursor pointer after it broke. Also fixed toast alignment

--- a/res/style.css
+++ b/res/style.css
@@ -22,6 +22,7 @@ button {
 .toast {
     position: fixed;
     top: 75%;
+    left: 0;
     margin: 0 auto;
     width:100%;
     background: white;
